force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <description>Tracks leave balance per employee per leave type per year. Includes entitled, accrued, used, pending, carry-forward, and calculated available balance.</description>
    <label>Leave Balance</label>
    <nameField>
        <displayFormat>LB-{0000}</displayFormat>
        <label>Balance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>