force-app/main/default/objects/Leave_Balance__c/fields/Accrued__c.field-meta.xml
<CustomField>
    <fullName>Accrued__c</fullName>
    <label>Accrued</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Days accrued so far this year. For lump-sum leave types (CL, SL), this equals the full entitlement. For monthly-accrual types (EL), this increments each month.</inlineHelpText>
</CustomField>