force-app/main/default/objects/Leave_Balance__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <label>Available</label>
    <formula>Accrued__c + Carry_Forward__c - Used__c - Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
    <inlineHelpText>Available balance = Accrued + Carry Forward - Used - Pending</inlineHelpText>
</CustomField>