force-app/main/default/objects/Leave_Balance__c/fields/Carry_Forward__c.field-meta.xml
<CustomField>
    <fullName>Carry_Forward__c</fullName>
    <label>Carry Forward</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Days carried forward from the previous year. Capped by the policy's Max Carry Forward setting.</inlineHelpText>
</CustomField>