force-app/main/default/objects/Leave_Balance__c/fields/Entitled__c.field-meta.xml
<CustomField>
    <fullName>Entitled__c</fullName>
    <label>Entitled</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total annual entitlement from the leave policy.</inlineHelpText>
</CustomField>