force-app/main/default/objects/Leave_Balance__c/fields/Leave_Policy__c.field-meta.xml
<CustomField>
    <fullName>Leave_Policy__c</fullName>
    <label>Leave Policy</label>
    <referenceTo>Leave_Policy__c</referenceTo>
    <relationshipLabel>Leave Balances</relationshipLabel>
    <relationshipName>Leave_Balances</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The leave policy that drives this balance's entitlement and accrual.</inlineHelpText>
</CustomField>