force-app/main/default/objects/Leave_Balance__c/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <label>Pending</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Days in submitted/pending leave requests (not yet approved or rejected).</inlineHelpText>
</CustomField>