force-app/main/default/objects/Leave_Balance__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <label>Used</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total approved leave days used this year.</inlineHelpText>
</CustomField>