force-app/main/default/objects/Leave_Balance__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <inlineHelpText>Fiscal year this balance applies to (e.g., 2026).</inlineHelpText>
</CustomField>